@@ -1,3 +1,9 @@
+2006-05-02 Yen-Ju Chen <yjchenx at gmail>
+	
+	* xmpp/RosterGroup.m:
+	* RosterController.m:
+	  Make sure the index is in the range of array.
+
 2006-05-01 Yen-Ju Chen <yjchenx at gmail>
 
 	* RosterWindow.m:
